// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test parseTypes method parseTypes method should work 1`] = `
"interface A {
  name: string;
}
export interface B {
  age: number;
}
type C = string | number;
export type D = C & number;"
`;

exports[`test parseTypes method parseTypes method should work 2`] = `
"interface A {
  name: string;
}
export type D = C & number;"
`;
